--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# webapp 
 bidict==0.23.1
 blinker==1.8.1
 click==8.1.7
@@ -12,3 +13,11 @@ python-socketio==5.11.2
 simple-websocket==1.0.0
 Werkzeug==3.0.2
 wsproto==1.2.0
+
+# speech recognition 
+pyaudio
+SpeechRecognition
+--extra-index-url https://download.pytorch.org/whl/cu116
+torch
+numpy
+git+https://github.com/openai/whisper.git
